--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -27,3 +27,29 @@
 	--sl-color-gray-7: #f3f6ff;
 	--sl-color-black: #ffffff;
 }
+
+.bg-img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 120vh;
+	opacity: 0.3;
+	animation: 2s intro;
+	background: url(https://shadersmods.com/wp-content/uploads/2022/06/sildurs-shaders-mod-2.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+}
+
+@keyframes intro {
+	0% {
+		scale: 1.4;
+		opacity: 0;
+	}
+
+	100% {
+		scale: 1.0;
+		opacity: 0.3;
+	}
+}
