--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -28,28 +28,24 @@
 	--sl-color-black: #ffffff;
 }
 
+.gb-holder {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 120vh;
+	overflow: hidden;
+}
+
 .bg-img {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 120vh;
+	width: 100%;
+	height: 100%;
 	opacity: 0.3;
-	animation: 2s intro;
 	background: url(https://shadersmods.com/wp-content/uploads/2022/06/sildurs-shaders-mod-2.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 	mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
-}
-
-@keyframes intro {
-	0% {
-		scale: 1.4;
-		opacity: 0;
-	}
-
-	100% {
-		scale: 1.0;
-		opacity: 0.3;
-	}
 }
