--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -11,6 +11,8 @@
 	--sl-color-gray-5: #353840;
 	--sl-color-gray-6: #24272e;
 	--sl-color-black: #17181c;
+
+	--background-image-opacity: 0.4;
 }
 /* Light mode colors. */
 :root[data-theme='light'] {
@@ -26,6 +28,8 @@
 	--sl-color-gray-6: #e7edff;
 	--sl-color-gray-7: #f3f6ff;
 	--sl-color-black: #ffffff;
+
+	--background-image-opacity: 1.0;
 }
 
 .bg-img {
@@ -34,7 +38,7 @@
 	left: 0;
 	width: 100%;
 	height: 130vh;
-	opacity: 0.4;
+	opacity: var(--background-image-opacity);
 	background: url(../assets/banner.webp);
 	background-repeat: no-repeat;
 	background-size: cover;
