--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -39,9 +39,9 @@
 	width: 100%;
 	height: 130vh;
 	opacity: var(--background-image-opacity);
-	background: url(../assets/banner.webp);
 	background-repeat: no-repeat;
 	background-size: cover;
+	background-position: center;
 	mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
 	z-index: -1;
 }
